--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="mb-4">Ближайште отправления автобусов</h1>
+    <h1 class="mb-4">Ближайшее отправление автобусов</h1>
     <p class="current-time">Сейчас: <strong><span></span></strong></p>
 
     <table id="bus" class="table table-striped table-bordered">
