--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,18 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <script defer src="js/scripts.js"></script>
 </head>
-<body>
+<body class="pt-3 pb-1">
   <div class="container">
-    <h1 class="mb-4">Ближайшее отправление автобусов</h1>
-    <p class="current-time">Сейчас: <strong><span></span></strong></p>
+    <div class="d-flex justify-content-between align-items-center mb-4 gap-5">
+      <h1 class="mb-0">Ближайшее отправление автобусов</h1>
+
+      <div id="#current-time-container" class="alert alert-primary d-flex align-items-center p-2 mb-0 gap-2">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock-fill" viewBox="0 0 16 16">
+          <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
+        </svg>
+        <span id="current-time" class="fw-bold"></span>
+      </div>
+    </div>
 
     <table id="bus" class="table table-striped table-bordered">
       <thead>
@@ -19,6 +27,7 @@
           <th>Маршрут</th>
           <th>Дата отправления</th>
           <th>Время отправления</th>
+          <th>До отправления</th>
         </tr>
       </thead>
 
